# hybrid-document-intelligence-platform

./: .gitignore  README.md  function_app.py  host.json  local.settings.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
docs/components/: surface-metric-card.md
infra/: main.bicep
review-app/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
review-app/public/: staticwebapp.config.json
review-app/src/: App.tsx  appMode.ts  appRoutes.test.ts  appRoutes.ts  featureFlags.test.ts  featureFlags.ts  styles.css  styles.heroAlignment.test.ts  styles.publicTopNav.test.ts  styles.widthSweep.test.ts  vite-env.d.ts
src/document_intelligence/: __init__.py  account_matching.py  account_review_reporting.py  api_contracts.py  aws_bridge.py  document_viewer.py  epic7_validation.py  extraction.py  inspection.py  intake_sources.py  live_site.py  manual_intake.py  models.py  operator_contracts.py  operator_state.py  orchestration.py  packet_classification.py  packet_extraction.py  packet_ocr.py  packet_pipeline_actions.py  packet_queue.py  packet_recommendation.py  packet_recommendation_review.py  packet_replay.py  packet_review.py  persistence.py  portfolio_modernization.py  processing_taxonomy.py  profiles.py  public_cost_metrics.py  public_cost_refresh.py  public_network_enrichment.py  public_request_context.py  public_security_feeds.py  public_site_monitor.py  public_traffic_metrics.py  repo_boundary.py  review_queue.py  safety.py  security_posture_api_derivative.py  (+8 more)
tests/unit/: test_account_matching.py  test_account_review_reporting.py  test_archive_expansion.py  test_archive_preflight.py  test_aws_bridge.py  test_configured_folder.py  test_document_viewer.py  test_epic7_gate_scripts.py  test_epic7_validation.py  test_extraction.py  test_function_app.py  test_inspection.py  test_intake_sources.py  (+47 more)
(+65 files in other folders)
