[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-document-intelligence-platform"
version = "0.1.0"
description = "Serverless-first hybrid document intelligence MVP scaffold."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "boto3>=1.37.0",
  "azure-ai-documentintelligence>=1.0.2",
  "azure-cosmos>=4.9.0",
  "azure-functions>=1.23.0",
  "azure-functions-durable>=1.2.9",
  "azure-identity>=1.15.0",
  "azure-mgmt-costmanagement>=4.0.1",
  "azure-servicebus>=7.14.2",
  "azure-storage-blob>=12.24.0",
  "certifi>=2025.1.31",
  "Flask>=3.1.0",
  "gunicorn>=23.0.0",
  "openpyxl>=3.1.5",
  "openai>=1.58.1",
  "Pillow>=11.0.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.1",
  "pyOpenSSL>=25.0.0",
  "python-tds>=1.16.1",
  "reportlab>=4.2.5",
  "six>=1.17.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "ruff>=0.8.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: scenario-driven tests with mocked infrastructure seams",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
packages = ["document_intelligence"]

[[tool.mypy.overrides]]
module = ["azure.durable_functions", "azure.functions"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["reportlab", "reportlab.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["function_app"]
disallow_untyped_decorators = false
warn_return_any = false